# api/config/swagger/OpenAPI/apidocs.swagger.json
@@ -19,6 +19,37 @@
     "application/json"
   ],
   "paths": {
+    "/v1/api/tenant-mgmt/tenant/{name}/kyb": {
+      "get": {
+        "operationId": "TenantManagement_GetTenantLevelKycStatus",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/configTenantLevelKycResp"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "name",
+            "description": "org name for tenantlevelkyc req",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "TenantManagement"
+        ]
+      }
+    },
     "/v1/api/tenant-mgmt/tenant/{name}/kyc": {
       "get": {
         "operationId": "TenantManagement_GetTenantUserLevelKycStatus",
@@ -39,38 +70,7 @@
         "parameters": [
           {
             "name": "name",
-            "description": "org name for kyc req",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "tags": [
-          "TenantManagement"
-        ]
-      }
-    },
-    "/v1/api/tenant-mgmt/v1/tenant/{name}/kyb": {
-      "get": {
-        "operationId": "TenantManagement_GetTenantLevelKCStatus",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/configTenantLevelKCResp"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "name",
-            "description": "org name for kyb req",
+            "description": "org name for tenantleveluserkyc req",
             "in": "path",
             "required": true,
             "type": "string"
@@ -161,12 +161,12 @@
       "default": "Pending",
       "title": "- Pending: Process is pending\n - InProcess: in-process\n - Failed: Process has failed\n - Partial: Process is Partially complete\n - Done: Process is done\n - ReVerificationNeeded: ReVerification is needed"
     },
-    "configTenantLevelKCResp": {
+    "configTenantLevelKycResp": {
       "type": "object",
       "properties": {
-        "TenantLevelKCStatus": {
+        "TenantLevelKycStatus": {
           "$ref": "#/definitions/configStatusInfo",
-          "title": "TenantLevelKC Status for tenant"
+          "title": "TenantLevelKyc Status for tenant"
         }
       }
     },
